<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#7AD1EE"
    tools:context=".registrar">

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="360dp"
        android:layout_height="497dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/redondeado"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="149dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:elevation="4sp"
        android:fontFamily="@font/source_sans_pro"
        android:gravity="top"
        android:text="@string/Registro"
        android:textAlignment="center"
        android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_5"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="208dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ingresa_datos_crear"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/flecha"
        android:focusable="true"
        android:onClick="toMainA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrowleft" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="a"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="UnknownIdInLayout" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="a"
        android:ems="10"
        android:hint="@string/repetir"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="b"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/crearusuari"
        android:layout_width="259dp"
        android:layout_height="72dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/redondeado"
        android:backgroundTint="#00BCD4"
        android:onClick="xd"
        android:text="@string/crear_usuario"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_5"
        app:layout_constraintStart_toStartOf="@+id/rectangle_5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        tools:text="Crear Usuario" />

    <TextView
        android:id="@+id/ya_tienes_c"
        android:layout_width="262dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/source_sans_pro"
        android:gravity="top"
        android:onClick="toAccess"
        android:text="@string/ya_tienes_c"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crearusuari"
        tools:ignore="RtlCompat"
        tools:text="¿Ya tienes cuenta?  Ingresa" />

</androidx.constraintlayout.widget.ConstraintLayout>