<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#7AD1EE"
    tools:context=".access"
    android:animateLayoutChanges="true">

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="360dp"
        android:layout_height="497dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/redondeado"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="149dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:elevation="4sp"
        android:fontFamily="@font/source_sans_pro"
        android:gravity="top"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_5"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="208dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ingresa_tus_datos_para_poder_acceder"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/flecha"
        android:focusable="true"
        android:onClick="toMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrowleft" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="234dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints="c"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints="c"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle" />

    <TextView
        android:id="@+id/olvidaste_t"
        android:layout_width="196dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro"
        android:gravity="top"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="RtlCompat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/accederboton"
        android:layout_width="259dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/redondeado"
        android:backgroundTint="#00BCD4"
        android:onClick="xd"
        android:text="@string/Acceder"

        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_5"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/rectangle_5"
        app:layout_constraintTop_toBottomOf="@+id/olvidaste_t"
        tools:text="@string/Acceder" />

    <TextView
        android:id="@+id/ya_tienes_c"
        android:layout_width="262dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/source_sans_pro"
        android:gravity="top"
        android:onClick="toRegistrar"
        android:text="@string/no_tienes_c"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_5"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_5"
        app:layout_constraintStart_toStartOf="@+id/rectangle_5"
        app:layout_constraintTop_toBottomOf="@+id/accederboton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlCompat"
        tools:text="@string/no_tienes_c" />
</androidx.constraintlayout.widget.ConstraintLayout>