<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".salud_articulos">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="371dp"
            android:layout_height="28dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/proveedor_de_noticias"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_background_color"
                    android:fontFamily="@font/source_sans_pro"
                    android:text="@string/revista_panamericana"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/b2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_background_color"
                    android:fontFamily="@font/source_sans_pro"
                    android:text="@string/el_espanol"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/b3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_background_color"
                    android:fontFamily="@font/source_sans_pro"
                    android:text="@string/onu_salud"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/b4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_background_color"
                    android:fontFamily="@font/source_sans_pro"
                    android:text="@string/el_universal"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/b5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/button_background_color"
                    android:fontFamily="@font/source_sans_pro"
                    android:text="@string/national_institutes_of_health"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/b6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/button_background_color"
                    android:fontFamily="@font/source_sans_pro"
                    android:text="@string/milenio"
                    android:textColor="#000000" />
            </LinearLayout>
        </HorizontalScrollView>

        <SearchView
            android:id="@+id/sw"
            android:layout_width="387dp"
            android:layout_height="34dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/webView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
            app:layout_constraintVertical_bias="1.0">

        </WebView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        style="@style/Widget.MaterialComponents.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:itemRippleColor="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingMarcadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/bottom_sheet_behavior"
        android:elevation="12dp"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bookmark_add_black" />

</androidx.constraintlayout.widget.ConstraintLayout>